# nearvanilla.com

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README  README.md  awards-config.json  docker-compose.yml  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
config/: awards-config.json  default.conf
htmls/: apply.html  downloads.html  highscores.json
htmls/js/: highscore.js
legacy/: .gitignore  docker-compose.yml
legacy/scripts/: update_awards.sh  update_awards_code.sh
legacy/src/: apply.html  downloads.html  highscores.html  index.html
legacy/src/css/: bootstrap.css
legacy/src/js/: highscore.js
public/: map_coming_soon.html
public/highscores/css/: agency.min.css  bootstrap-reboot.css
public/highscores/js/: bootstrap.min.js  (+1 more)
public/hiscores/: highscores.json  index.html
scripts/: update_awards.sh  update_awards_code.sh
src/: App.vue  apply.html  caching.rs  downloads.html  error.rs  highscores.html  index.html  main.js  main.rs  plugins.js  render.rs
src/components/: DownloadCard.vue  Island.vue  Map.vue  Members.vue  Navbar.vue  Plugins.vue  index.js
src/css/: agency.min.css  bootstrap-responsive.min.css  bootstrap.min.css
src/js/: agency.js  agency.min.js  highscore.js  members.js
src/router/: index.js  routes.js
src/store/: home.store.js  index.js
src/views/: Downloads.vue  Home.vue  PlayerStats.vue
static/js/: GoogleAnalytics.js  bootstrap.js  featureSlider.js  highscore.js  members.js
templates/: apply.html.tera  base.html.tera  highscores.html.tera  index.html.tera
(+4 files in other folders)
