[package]
name = "nearvanilla_com"
version = "0.1.0"
authors = ["Professor Bloodstone <git@bloodstone.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = [ "json", "serve", "tera_templates" ]

[dependencies.uuid]
version = "0.7"
features = ["v4", "serde"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]


[dev-dependencies]
pretty_assertions = "0.6"
